tests/errors/bad-octal-digit/main.pa
# An octal literal with a digit outside 0-7.
def main = 0o89
